fix footer and feature item text in dark mode

--- a/css/FeatureItem.module.css
+++ b/css/FeatureItem.module.css
@@ -40,6 +40,10 @@
   color: rgb(107 114 128);
 }
 
+:global(.dark) .textColor {
+  color: white;
+}
+
 .linkContainer {
   margin-top: 0.5rem;
 }
